# open-xiaoai

./: README.md
.github/workflows/: compile-client-rust.yml
apps/hello/: Cargo.toml  Makefile  build.sh
apps/hello/src/: config.rs  lib.rs  main.rs  sync.rs
apps/hello/src/audio/: codec.rs  mod.rs  player.rs  reader.rs  recorder.rs
apps/hello/src/config/: asound.lx06.conf  asound.oh2p.conf
apps/hello/src/net/: discovery.rs  mod.rs  protocol.rs
apps/hello/src/stereo_core/: alsa.rs  discovery.rs  injector.rs  jitter_buffer.rs  master.rs  mixer.rs  mod.rs  network.rs  protocol.rs  slave.rs  sync.rs
apps/runtime/: Dockerfile  README.md  build.sh  run.sh
examples/kws/: boot.sh
examples/stereo/: Cargo.toml  Makefile  README.md
examples/stereo/scripts/: boot.sh  init.sh
examples/stereo/src/: main.rs
examples/stereo/src/app/: entry.rs  master.rs  mod.rs  slave.rs
examples/stereo/src/audio/: codec.rs  mod.rs  player.rs  recorder.rs
examples/stereo/src/net/: discovery.rs  mod.rs  network.rs
examples/stereo/src/utils/: alsa.rs  jitter_buffer.rs  mod.rs  sync.rs
examples/xiaozhi/: Dockerfile  README.md  config.py  pyproject.toml
examples/xiaozhi/scripts/: boot.sh
examples/xiaozhi/xiaozhi/services/audio/kws/: __init__.py
examples/xiaozhi/xiaozhi/services/audio/vad/: __init__.py
