[package]
name = "hello"
version = "0.1.0"
edition = "2024"

[profile.release]
lto = true
opt-level = "s"
codegen-units = 1
panic = "abort"
strip = true
debug = false

[dependencies]
alsa = "0.11"
opus = "0.3"
anyhow = "1.0"
tokio = { version = "1.47", features = ["full"] }
symphonia = { version = "0.5", features = ["mp3", "isomp4"] }
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
log = "0.4"
env_logger = "0.11"
byteorder = "1.5"
